--- a/templates/index.html
+++ b/templates/index.html
@@ -360,7 +360,8 @@
             <a href="#">+358402457337</a>
             <a href="#">+358449314564</a>
             <a href="#">olisagarsandesh@gmail.com</a>
-            <a href="#">mahendra.sharma@metropolia.fi</a>
+            <a href="#">mahendra.sharma@gmail.com</a>
+            <a href="#">dhungananischal371@gmail.com</a>
             <a href="#">Kirstintie 30 C, Espoo , 02760/a>
         </div>
 
