--- a/templates/index.html
+++ b/templates/index.html
@@ -16,21 +16,21 @@
 
 <!-- header section starts      -->
 <header>
- <a href="#" class="logo"><i class="fas fa-utensils"></i>resto.</a>
+ <a href="/" class="logo"><i class="fas fa-utensils"></i>resto.</a>
 
     <nav class="navbar">
         <a class="active" href="#">{{ t['home'] }}</a>
         <a href="/dishes">{{ t['dishes'] }}</a>
-        <a href="#">{{ t['about'] }}</a>
         <a href="/menu">{{ t['menu'] }}</a>
         <a href="/review">{{ t['review'] }}</a>
         <a href="{{ url_for('order') }}">{{ t['order'] }}</a>
+        <a href="#">contact</a>
     </nav>
 
     <div class="icons">
-        <i class="fas fa-bars" id="menu-bars"></i>
-        <i class="fas fa-search" id="search-icon"></i>
-        <a href="#" class="fas fa-heart"></a>
+        <!-- <i class="fas fa-bars" id="menu-bars"></i> -->
+        <!-- <i class="fas fa-search" id="search-icon"></i> -->
+        <!-- <a href="#" class="fas fa-heart"></a> -->
         <a href="/cart" class="fas fa-shopping-cart" id="open-cart"><span id="cart-count" class="cart-badge">0</span></a>
         <a href="/login" class="fas fa-user"></a>
     </div>
