--- a/templates/review.html
+++ b/templates/review.html
@@ -17,23 +17,25 @@
 
 <!-- header section starts      -->
 <header>
- <a href="#" class="logo"><i class="fas fa-utensils"></i>resto.</a>
+ <a href="/" class="logo"><i class="fas fa-utensils"></i>resto.</a>
 
     <nav class="navbar">
-        <a href="index.html">home</a>
-        <a href="dish.html">dishes</a>
-        <a href="#">about</a>
-        <a href="menu.html">menu</a>
-        <a class="active" href="./review.html">review</a>
-        <a href="order.html">order</a>
+        <a href="/">home</a>
+        <a href="/dishes">dishes</a>
+        <a href="/menu">menu</a>
+        <a class="active" href="/review">review</a>
+        <a href="/order">order</a>
+        <a href="#">contact</a>
     </nav>
 
     <div class="icons">
-        <i class="fas fa-bars" id="menu-bars"></i>
+        <!-- <i class="fas fa-bars" id="menu-bars"></i>
         <i class="fas fa-search" id="search-icon"></i>
-        <a href="#" class="fas fa-heart"></a>
-        <a href="#" class="fas fa-shopping-cart"></a>
-        <a href="login.html" class="fas fa-user"></a>
+        <a href="#" class="fas fa-heart"></a> -->
+        <a href="/cart" class="fas fa-shopping-cart">
+            <span id="cart-count" class="cart-badge">0</span>
+        </a>
+        <a href="/login" class="fas fa-user"></a>
     </div>
 </header>
 
