--- a/templates/review.html
+++ b/templates/review.html
@@ -179,7 +179,7 @@
 
     </div>
 
-    <div class="credit"> copyright @ 2025 by <span> Backlol team</span> </div>
+    <div class="credit"> copyright @ 2025 by <span> Metropolia Student</span> </div>
 
 </section>
 
