--- a/templates/review.html
+++ b/templates/review.html
@@ -25,7 +25,7 @@
         <a href="/menu">menu</a>
         <a class="active" href="/review">review</a>
         <a href="/order">order</a>
-        <a href="#">contact</a>
+        <a href="contact">contact</a>
     </nav>
 
     <div class="icons">
@@ -37,16 +37,37 @@
         </a>
         <a href="/login" class="fas fa-user"></a>
     </div>
+
+    <div class="lang-switch">
+            <a href="/lang/en">EN</a> | <a href="/lang/fi">FI</a>
+        </div>
+
+        <style>
+            .lang-switch {
+                margin-left: 20px;
+                font-weight: bold;
+            }
+
+            .lang-switch a {
+                color: #333;
+                text-decoration: none;
+                padding: 0 5px;
+            }
+
+            .lang-switch a:hover {
+                color: #ff3838;
+            }
+        </style>
 </header>
 
 <!-- Header Section ends-->
 
 <!-- search form -->
-<form action="" id="search-form">
+<!-- <form action="" id="search-form">
     <input type="search" placeholder="search here..." name="" id="search-box">
     <label for="search-box" class="fas fa-search"></label>
     <i class="fas fa-times" id="close"></i>
-</form>
+</form> -->
 
 <!-- review section starts  -->
 <section class="review" id="review">
