--- a/static/css/style.css
+++ b/static/css/style.css
@@ -787,6 +787,70 @@ header .icons #menu-bars{
 
 }
 
+.contact {
+    padding: 3rem 9%;
+    background: #fff;
+}
+
+.contact .heading {
+    text-align: center;
+    margin-bottom: 3rem;
+    font-size: 3.5rem;
+    color: #333;
+}
+
+.contact .heading span {
+    color: #ff3838;
+}
+
+.contact-container {
+    display: flex;
+    gap: 3rem;
+    background: #f7f7f7;
+    padding: 3rem;
+    border-radius: 1rem;
+}
+
+.contact-info {
+    flex: 1;
+}
+
+.contact-info h3 {
+    font-size: 2.5rem;
+    color: #333;
+    margin-bottom: 1.5rem;
+}
+
+.contact-info p {
+    font-size: 1.6rem;
+    color: #555;
+    margin-bottom: 1.2rem;
+}
+
+.contact-info i {
+    color: #ff3838;
+    margin-right: 0.8rem;
+}
+
+.contact-map {
+    flex: 1;
+}
+
+.contact-map iframe {
+    width: 100%;
+    height: 100%;
+    min-height: 300px;
+    border: none;
+    border-radius: 1rem;
+}
+
+@media (max-width: 768px) {
+    .contact-container {
+        flex-direction: column;
+    }
+}
+
+
 @media (max-width:450px){
 
     html{
