--- a/templates/contact.html
+++ b/templates/contact.html
@@ -11,6 +11,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
     <link rel="stylesheet" href="../static/css/style.css">
 
+
 </head>
 <body>
 
@@ -20,19 +21,19 @@
 
     <nav class="navbar">
         <a href="/">home</a>
-        <a class="active" href="/dishes">dishes</a>
+        <a href="/dishes">dishes</a>
         <a href="/menu">menu</a>
         <a href="/review">review</a>
         <a href="/order">order</a>
-        <a href="/contact">contact</a>
+        <a class="active" href="contact">contact</a>
     </nav>
 
     <div class="icons">
         <!-- <i class="fas fa-bars" id="menu-bars"></i>
         <i class="fas fa-search" id="search-icon"></i>
         <a href="#" class="fas fa-heart"></a> -->
-       <a href="/cart" class="fas fa-shopping-cart">
-           <span id="cart-count" class="cart-badge">0</span>
+        <a href="/cart" class="fas fa-shopping-cart">
+            <span id="cart-count" class="cart-badge">0</span>
         </a>
         <a href="/login" class="fas fa-user"></a>
     </div>
@@ -61,27 +62,51 @@
 
 <!-- Header Section ends-->
 
-<!-- search form -->
-<form action="" id="search-form">
-    <input type="search" placeholder="search here..." name="" id="search-box">
-    <label for="search-box" class="fas fa-search"></label>
-    <i class="fas fa-times" id="close"></i>
-</form>
+<!-- contact section starts  -->
+<section class="contact" id="contact">
 
-<!-- dishes section starts  -->
+    <h3 class="sub-heading"> Contact Us</h3>
+    <br>
 
-<section class="dishes" id="dishes">
+    <div class="contact-container">
 
-    <h3 class="sub-heading"> our dishes </h3>
-    <h1 class="heading"> popular dishes </h1>
+        <!-- Contact Information -->
+        <div class="contact-info">
+            <h3>Restaurant Information</h3>
 
-    <div class="box-container" id="dishes-container">
+            <p><i class="fas fa-store"></i> <strong>Resto Restaurant</strong></p>
+
+            <p><i class="fas fa-map-marker-alt"></i>
+                Kirstintie 30 C,
+                Espoo, 02760, Finland
+            </p>
+
+            <p><i class="fas fa-phone"></i> +358 40 245 7337</p>
+            <p><i class="fas fa-phone"></i> +358 44 931 4564</p>
+
+            <p><i class="fas fa-envelope"></i>mahendra.sharma@metropolia.fi</p>
+
+            <p><i class="fas fa-clock"></i>
+                Mon – Sun: 10:00 AM – 10:00 PM
+            </p>
+        </div>
+
+        <div class="contact-map">
+            <iframe
+                src="https://www.google.com/maps?q=Espoo%20Finland&t=&z=13&ie=UTF8&iwloc=&output=embed"
+                loading="lazy"
+                allowfullscreen>
+            </iframe>
+        </div>
 
     </div>
 
 </section>
 
-<!-- dishes section ends -->
+
+
+<!-- contact section ends -->
+
 
 <!-- footer section start -->
 
@@ -114,6 +139,7 @@
             <a href="#">+358449314564</a>
             <a href="#">olisagarsandesh@gmail.com</a>
             <a href="#">mahendragautamsharma@gmail.com</a>
+            <a href="#">dhungananischal371@gmail.com</a>
             <a href="#">Kirstintie 30 C, Espoo , 02760/a>
         </div>
 
@@ -133,8 +159,6 @@
 
 <!--footer section end-->
 
-<script src="{{ url_for('static', filename='js/dish.js') }}"></script>
 
 </body>
-
 </html>
